--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.sfu</groupId>
     <artifactId>cloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0</version>
+    <modules>
+        <module>first-ribbon-client</module>
+    </modules>
 
 
 </project>
