--- a/first-ribbon-client/pom.xml
+++ b/first-ribbon-client/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>ribbon-httpclient</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.netflix.archaius</groupId>
+            <artifactId>archaius-core</artifactId>
+            <version>0.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.ribbon</groupId>
+            <artifactId>ribbon-loadbalancer</artifactId>
+            <version>2.2.2</version>
+        </dependency>
 
     </dependencies>
 </project>
