--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
         <module>first-ribbon-client</module>
         <module>cxf-client</module>
         <module>feign-client</module>
+        <module>first-ek-server</module>
+        <module>first-cloud-provider</module>
+        <module>first-cloud-server</module>
     </modules>
 
 
